[metadata]
name = co2meter-exporter
version = 0.1.0
description = Prometheus exporter for CO2 meter
long_description = file: README.md
long_description_content_type = text/markdown
keywords = prometheus
maintainer = Yusuke Miyazaki
maintainer-email = miyazaki.dev@gmail.com
author = Yusuke Miyazaki
author-email = miyazaki.dev@gmail.com
url = https://github.com/ymyzk/co2meter-exporter
project_urls =
    Source=https://github.com/ymyzk/co2meter-exporter
    Tracker=https://github.com/ymyzk/co2meter-exporter/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
zip_safe = True
python_requires = >=3.5
install_requires =
    co2meter@git+https://github.com/heinemml/CO2Meter@85db5a6be043d4645801a010098bdea96e2a0ad1
    prometheus-client>=0.5.0
